[FIX] Deposit Label

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -1147,14 +1147,18 @@
   "deliveryitem.deliver": "Deliver",
   "deposit.errorLoadingBalances": "There was an error loading your balances.",
   "deposit.yourPersonalWallet": "Your Personal Wallet",
-  "deposit.farmWillReceive": "Your farm will receive:",
+  "deposit.farmWillReceive": "Your farm will receive",
   "deposit.depositDidNotArrive": "Deposit didn't arrive?",
   "deposit.goblinTaxInfo": "When players withdraw any SFL, a Goblin Tax is applied.",
   "deposit.sendToFarm": "Send to farm",
   "deposit.toDepositLevelUp": "To deposit items you must first level up",
   "deposit.level": "Level 3",
   "deposit.noSflOrCollectibles": "No SFL or Collectibles Found!",
+  "deposit.noCollectibles": "No Collectibles, Wearables or Buds Found!",
+  "deposit.addCollectiblesToPolygonWallet": "Add your Collectibles, Wearables and Buds to your linked Polygon Wallet in order to deposit them.",
   "deposit.farmAddress": "Farm address:",
+  "deposit.linkedWallet": "Linked Wallet:",
+  "deposit.refreshWallet": "Refresh Wallet",
   "question.depositSFLItems": "Would you like to deposit Sunflower Land collectibles, wearables or SFL?",
   "detail.how.item": "How to get this item?",
   "detail.Claim.Reward": "Claim reward",
