--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -5543,7 +5543,7 @@
   "vip.ronin.purchase.warning": "Ronin NFT VIP active. Return 1 day before expiry to purchase VIP.",
   "withdraw.sfl.disabled": "Token withdrawals are temporarily paused while we complete our migration to $FLOWER.",
   "ronin.comingSoon": "April 1st - Use Ronin wallet to purchase gems, mint NFTs, trade & more!",
-  "announcement.lockdown": "To prepare for $FLOWER, $SFL withdrawals and deposits will be disabled from March 21st.",
+  "announcement.lockdown": "To prepare for $FLOWER, $SFL withdrawals and deposits will be disabled from March 24th.",
   "announcement.flowerGems": "Buy Gems with $FLOWER - coming May 2025",
   "announcement.gasless": "Gasless transactions are coming April 1st.",
   "rocketman.intro": "Howdy Bumpkin, I'm trying to build a flower tower to the moon!",
