[CHORE] Polish Chinese translation [skip ci]

--- a/src/lib/i18n/dictionaries/zh-CN.json
+++ b/src/lib/i18n/dictionaries/zh-CN.json
@@ -4444,13 +4444,13 @@
   "time.days.in": "在 {{time}} {{dayORdays}}",
   "fullMoon.specialEvent": "特别活动-满月",
   "sunflowerClock": "向日葵时钟",
-  "days.mon": "周一。",
-  "days.tue": "周二。",
-  "days.wed": "周三。",
-  "days.thu": "周四。",
-  "days.fri": "周五。",
-  "days.sat": "周六。",
-  "days.sun": "周日。",
+  "days.mon": "周一",
+  "days.tue": "周二",
+  "days.wed": "周三",
+  "days.thu": "周四",
+  "days.fri": "周五",
+  "days.sat": "周六",
+  "days.sun": "周日",
   "calendar.events.tornado.title": "龙卷风",
   "calendar.events.fullMoon.title": "满月",
   "calendar.events.tsunami.title": "海啸",
