--- a/src/lib/i18n/dictionaries/ru.json
+++ b/src/lib/i18n/dictionaries/ru.json
@@ -4235,7 +4235,7 @@
   "skill.shortPickings.debuff": "+100% времени роста всех остальных фруктов",
   "skill.slickSaver": "-1 нефть для выращивания тепличных культур",
   "skill.speedMiner": "-20% времени восстановления камней",
-  "skill.strongRoots": "-10% время роста урожая",
+  "skill.strongRoots": "-10% время роста продвинутого урожая",
   "skill.sweetBonus": "+0.1 мёда на улей",
   "skill.swiftDecomposer": "-10% времени компостирования",
   "skill.swiftSizzle": "-40% времени приготовления на костре с нефтью",
@@ -4416,7 +4416,7 @@
   "time.day.short": "д",
   "time.days.ago": "{{time}} {{dayORdays}} назад",
   "time.days.full": "дней",
-  "time.days.in": "в {{time}} {{dayORdays}}",
+  "time.days.in": "через {{time}} {{dayORdays}}",
   "time.days.med": "дней",
   "time.hour.full": "час",
   "time.hour.short": "ч",
@@ -4430,14 +4430,14 @@
   "time.millisecond.short": " мс",
   "time.milliseconds.ago": "{{time}} {{millisecondORmilliseconds}} назад",
   "time.milliseconds.full": "миллисекунд",
-  "time.milliseconds.in": "в {{time}} {{millisecondORmilliseconds}}",
+  "time.milliseconds.in": "через {{time}} {{millisecondORmilliseconds}}",
   "time.min.med": "мин",
   "time.mins.med": "мин",
   "time.minute.full": "минута",
   "time.minute.short": "м",
   "time.minutes.ago": "{{time}} {{minuteORminutes}} назад",
   "time.minutes.full": "минут",
-  "time.minutes.in": "в {{time}} {{minuteORminutes}}",
+  "time.minutes.in": "через {{time}} {{minuteORminutes}}",
   "time.ms.med": " мс",
   "time.mss.med": " мс",
   "time.remaining": "Оставшееся время: {{time}}",
@@ -4446,7 +4446,7 @@
   "time.second.short": "с",
   "time.seconds.ago": "{{time}} {{secondORseconds}} назад",
   "time.seconds.full": "секунд",
-  "time.seconds.in": "в {{time}} {{secondORseconds}}",
+  "time.seconds.in": "через {{time}} {{secondORseconds}}",
   "time.secs.med": "сек",
   "timeToChop.description": "Создать 500 топоров",
   "tools": "Инструменты",
@@ -4772,22 +4772,22 @@
   "yes": "Да",
   "yes.please": "Да, пожалуйста",
   "season.codex.howToEarn.two": "Полная работа по дому для шишек. ({{date}})",
-  "season.codex.howToEarn.three": "Торгуйте наградами за животных и цветы! ({{date}})",
+  "season.codex.howToEarn.three": "получайте награды за животных и цветы! ({{date}})",
   "season.codex.mutants.four": "Собирайте молоко у своих коров, чтобы найти {{item}}.",
-  "season.codex.mutants.five": "Собирайте шерсть у своих овец и откройте для себя {{item}}.",
+  "season.codex.mutants.five": "Собирайте шерсть у своих овец, чтобы найти {{item}}.",
   "competition.ended.description.two": "Победители подсчитываются и будут объявлены 7 февраля!",
   "not.enough.sfl": "У вас недостаточно SFL",
   "description.goldenSheep.boost": "Кормите овец бесплатно!",
   "description.solAndLuna.boost": "Скорость изготовления в 2 раза",
-  "description.blossomWard.boost": "Урожай на участке +1 весной",
-  "description.solflareAegis.boost": "Время сбора урожая на участке: -50% летом",
-  "description.autumnsEmbrace.boost": "Осенний период сбора урожая на участке: -50%",
-  "description.frozenHeart.boost": "+1 урожайность на участке зимой",
+  "description.blossomWard.boost": "+1 урожай на грядках весной",
+  "description.solflareAegis.boost": "-50% времени роста урожая на грядках Летом",
+  "description.autumnsEmbrace.boost": "-50% времени роста урожая на грядках Осенью",
+  "description.frozenHeart.boost": "+1 урожай на грядках зимой",
   "vip.benefit.windOfChange": "Рост урожайности VIP-персон в условиях ветров перемен (+0,25 новых культур)",
   "temperateSeason.possibleEventsDescription": "Посетите магазин погоды на площади, чтобы защитить свою ферму!",
   "beds": "Кровати",
   "weatherItems": "Предметы погоды",
-  "birdieplaza.currentSeason": "Сейчас мы в главе {{currentSeason}}, а Бампкинс сходит с ума по {{seasonalTicket}} с.",
+  "birdieplaza.currentSeason": "Сейчас мы в главе {{currentSeason}}, а Бампкинс сходит с ума по {{seasonalTicket}}.",
   "description.catch.the.kraken.banner": "Кракен уже здесь! Знак участника главы «Поймай кракена».",
   "description.solar.flare.ticket": "(LEGACY) Билет, использованный во время главы «Солнечная вспышка»",
   "description.dawn.breaker.ticket": "(LEGACY) Билет, использованный во время главы Dawn Breaker",
@@ -5292,7 +5292,7 @@
   "skillCategory.reachIsland": "Доберитесь до острова {{island}}, чтобы разблокировать",
   "powerSkills.reason.animalsNotAsleep": "Все ваши животные не спят",
   "time.ago": "{{time}} назад",
-  "time.in": "в {{time}}",
+  "time.in": "через {{time}}",
   "whatsOn.ticketsEnd": "Больше никаких временных интервалов",
   "whatsOn.april28th": "28 апреля",
   "error.recipeNotReady": "Рецепты не готовы",
