--- a/src/lib/i18n/dictionaries/zh-CN.json
+++ b/src/lib/i18n/dictionaries/zh-CN.json
@@ -4325,7 +4325,7 @@
   "temperateSeason.newSeason": "新赛季",
   "temperateSeason.seasonDetails": "赛季详情",
   "temperateSeason.seasonalCrops": "季节性作物",
-  "temperateSeason.enterSeason": "输入 {{season}}",
+  "temperateSeason.enterSeason": "进入 {{season}}",
   "temperateSeason.introduction.one": "你好 Farmer！在现实世界中，每隔7天，向日葵之地的季节就会改变！",
   "temperateSeason.introduction.two": "每个季节都会带来不同的机会。某些作物只能在特定季节生长。留意可能影响您的农场的季节性事件。",
   "temperateSeason.introduction.three": "确保保护您的农作物并为任何事情做好准备！",
@@ -4444,28 +4444,28 @@
   "time.days.in": "在 {{time}} {{dayORdays}}",
   "fullMoon.specialEvent": "特别活动-满月",
   "sunflowerClock": "向日葵时钟",
-  "days.mon": "星期一。",
-  "days.tue": "星期二。",
-  "days.wed": "星期三。",
-  "days.thu": "星期四。",
-  "days.fri": "星期五。",
-  "days.sat": "星期六。",
-  "days.sun": "太阳。",
+  "days.mon": "周一",
+  "days.tue": "周二",
+  "days.wed": "周三",
+  "days.thu": "周四",
+  "days.fri": "周五",
+  "days.sat": "周六",
+  "days.sun": "周日",
   "calendar.events.tornado.title": "龙卷风",
   "calendar.events.fullMoon.title": "满月",
   "calendar.events.tsunami.title": "海啸",
   "calendar.events.unknown.title": "未知事件",
   "calendar.events.unknown.description": "一股神秘的力量正在接近...它会带来财富还是毁灭？只有时间会证明一切。",
-  "season.spring": "春天",
-  "season.summer": "夏天",
-  "season.autumn": "秋天",
+  "season.spring": "春季",
+  "season.summer": "夏季",
+  "season.autumn": "秋季",
   "season.winter": "冬季",
   "skill.treeTurnaround": "树木有 15% 的几率立即生长",
   "powerSkills.reason.insufficientItems": "物品不足",
   "powerSkills.fertiliser": "化肥技能",
   "powerSkills.reason.insufficientFertiliser": "不足 {{fertiliser}}",
   "powerSkills.reason.allPlotsFertilised": "所有地块都已施肥",
-  "powerSkills.reason.allFruitPatchesFertilised": "所有的水果地都已经受精了",
+  "powerSkills.reason.allFruitPatchesFertilised": "所有的水果地都已施肥",
   "powerSkills.reason.noCropsGrowing": "没有农作物在生长",
   "powerSkills.reason.noTreesRecovering": "没有树木能恢复",
   "powerSkills.reason.noGreenhouseProduceGrowing": "没有温室农产品在增长",
@@ -4517,10 +4517,10 @@
   "cropGuide.flower": "花",
   "cropGuide.fruit.description": "水果只能种在水果地里。每株植物可以多次收割。",
   "cropGuide.otherProduce": "其他农产品",
-  "spring.seeds": "春天的种子",
-  "summer.seeds": "夏日种子",
-  "autumn.seeds": "秋天的种子",
-  "winter.seeds": "冬天的种子",
+  "spring.seeds": "春季的种子",
+  "summer.seeds": "夏季的种子",
+  "autumn.seeds": "秋季的种子",
+  "winter.seeds": "冬季的种子",
   "seasonal.wrongSeed": "错误的种子",
   "seasonal.wrongSeedDescription": "{{seed}} 不能种植在 {{season}} 中。请选择其他种子。",
   "crops.basicCrop": "基础作物",
@@ -4767,7 +4767,7 @@
   "chapter": "章节",
   "season.codex.auction.totalSupply": "总供应量：{{totalSupply}}",
   "guide.compost.seasons": "堆肥者的要求每个季节都会变化",
-  "time.left": "左边",
+  "time.left": "剩余时间",
   "description.rhubarb.tart": "一款以新鲜大黄为特色的甜而浓郁的馅饼",
   "competition.ended": "比赛已经结束",
   "competition.ended.description": "比赛已经结束。感谢您的参与！",
