Add SFT's Boost Warnings

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -245,10 +245,13 @@
   "description.mushroom.house.boost": "+0.2 Wild Mushroom",
   "description.boost.gilded.swordfish": "+0.1 Gold",
   "description.nancy.boost": "-15% Crop Growth Time",
+  "description.nancy.warning": "Disabled if Scarecrow or Kuebiko Active",
   "description.scarecrow.boost": "+20% Crop Yield",
+  "description.scarecrow.warning": "Disabled if Kuebiko Active",
   "description.kuebiko.boost": "Free Seeds",
   "description.gnome.boost": "+10 yield to medium/advanced crops",
   "description.gnome.boost.aoe": "Affects plot below",
+  "description.gnome.warning": "Requires Clementine & Cobalt",
   "description.lunar.calendar.boost": "-10% Crop Growth Time",
   "description.peeled.potato.boost": "20% Chance for +1 Potato",
   "description.victoria.sisters.boost": "+20% Pumpkin",
@@ -288,7 +291,9 @@
   "description.farm.dog.boost": "-25% Sheep Production Time",
   "description.gold.egg.boost": "Feed Chickens for free",
   "description.woody.beaver.boost": "+20% Wood",
+  "description.woody.beaver.warning": "Disabled if Apprentice Beaver or Foreman Beaver Active",
   "description.apprentice.beaver.boost": "-50% Tree Recovery Time",
+  "description.apprentice.beaver.warning": "Disabled if Foreman Beaver Active",
   "description.foreman.beaver.boost": "Chop Trees without Axes",
   "description.wood.nymph.wendy.boost": "+0.2 Wood",
   "description.tiki.totem.boost": "+0.1 Wood",
