--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -241,7 +241,8 @@
   "description.tin.turtle.boost": "+0.1 Stone",
   "description.turtle.boost.aoe": "Affects plots around (3x3)",
   "description.heart.of.davy.jones.boost": "+20 Desert Digs",
-  "description.Karkinos.boost": "+0.1 Cabbage (Inactive with Cabbage Boy)",
+  "description.Karkinos.boost": "+0.1 Cabbage",
+  "description.Karkinos.warning": "Disabled if Cabbage Boy Active",
   "description.mushroom.house.boost": "+0.2 Wild Mushroom",
   "description.boost.gilded.swordfish": "+0.1 Gold",
   "description.nancy.boost": "-15% Crop Growth Time",
