[FEAT] Reputation Guide

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -5449,6 +5449,14 @@
   "reputation.cropkeeper.deliveries": "Unlock All SFL Deliveries",
   "reputation.grower.auctions": "Auction Access",
   "reputation.marketplace.trades": "Increase your reputation to unlock more trades.",
+  "reputation.tiers": "Tiers",
+  "reputation.earnPoints": "Earn points",
+  "reputation.guide.upgrade": "Unlock all the expansions on your current island, and then click the goblin on the raft to reach the next island. (Basic -> Spring -> Desert -> Volcano)",
+  "reputation.guide.levelUp": "To level up your Bumpkin, cook food in the cooking buildings, and click on the Bumpkin in front of the tent or house to feed it.",
+  "reputation.guide.connectDiscord": "Connect the Discord Account through the boat at the top of your island and receive the 'Companion Cap' as a reward.",
+  "reputation.guide.proofOfHumanity": "Complete the Proof of Humanity by traveling to Retreat Island and locating the bank.",
+  "reputation.guide.ownBud": "Own a Bud by purchasing it through the in-game or third-party marketplaces.",
+
   "verify.verified": "You are verified!",
   "verify.verify": "Verify your account to increase your reputation.",
   "lavaPit.active": "Active",
