--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -5606,9 +5606,9 @@
   "hintIlluminationNormalText": "Lighting conditions normal",
   "hintHoldFaceForFreshnessText": "Hold still",
   "hintMatchIndicatorText": "50% completed. Keep moving closer.",
-  "photosensitivityWarningBodyText": "This check flashes different colors. Use caution if you are photosensitive.",
+  "photosensitivityWarningBodyText": "This check uses video & flashes different colors to verify you are not a bot.",
   "photosensitivityWarningHeadingText": "Photosensitivity warning",
-  "photosensitivityWarningInfoText": "Some people may experience epileptic seizures when exposed to colored lights. Use caution if you, or anyone in your family, have an epileptic condition.",
+  "photosensitivityWarningInfoText": "Use caution if you, or anyone in your family, have an epileptic condition.",
   "photosensitivityWarningLabelText": "More information about photosensitivity",
   "photosensitivyWarningBodyText": "This check flashes different colors. Use caution if you are photosensitive.",
   "photosensitivyWarningHeadingText": "Photosensitivity warning",
@@ -5619,5 +5619,22 @@
   "startScreenBeginCheckText": "Start video check",
   "tooFarCaptionText": "Too far",
   "tooFarAltText": "Illustration of a person's face inside of an oval; there is a gap between the perimeter of the face and the boundaries of the oval.",
-  "waitingCameraPermissionText": "Waiting for you to allow camera permission."
+  "waitingCameraPermissionText": "Waiting for you to allow camera permission.",
+  "gameOptions.faceRecognition": "Face Recognition",
+  "starting.face.recognition": "Preparing your secure verification.",
+  "starting.face.recognition.success": "Follow the instructions to verify your identity.",
+  "completing.face.recognition": "We are securely verifying your identity.",
+  "completing.face.recognition.success": "Your identity has been processed.",
+  "faceRecognition.tryAgain": "Try Again",
+  "faceRecognition.introText": "To ensure a secure economy, we will perform a quick privacy scan to ensure you are human.",
+  "faceRecognition.startButton": "Start Face Recognition",
+  "faceRecognition.expiredTitle": "Face Recognition Expired",
+  "faceRecognition.expiredDescription": "It looks like your face recognition session has expired. Please try again.",
+  "faceRecognition.retryButton": "Retry",
+  "faceRecognition.duplicateTitle": "Duplicate Found",
+  "faceRecognition.duplicateDescription": "Hmm, it looks like another farm has used this face to login. Please contact support if you believe this is an error.",
+  "faceRecognition.failedTitle": "Failed",
+  "faceRecognition.failedDescription": "Hmm, it looks like something went wrong. Please try again.",
+  "faceRecognition.successTitle": "Success",
+  "faceRecognition.successDescription": "You have successfully verified your identity. Time to get farming!"
 }
