--- a/src/lib/i18n/dictionaries/es.json
+++ b/src/lib/i18n/dictionaries/es.json
@@ -4754,7 +4754,7 @@
   "description.frozen.cow": "Una vaca que ha quedado completamente congelada por los vientos del invierno.",
   "description.summer.chicken.boost": "No hay enfermedad de los pollos durante el verano",
   "description.summer.chicken": "¡Un pollo amante del sol que prospera con el calor del verano, disfrutando de los cálidos rayos y cacareando de alegría!",
-  "description.jellyfish.boost": "Aumente la captura de peces en un 1% en verano",
+  "description.jellyfish.boost": "+1 pez en la estacion de Verano",
   "description.jellyfish": "Una luminosa maravilla marina que brilla con energía mística y que permite mejorar las habilidades de pesca durante los cálidos meses de verano.",
   "description.chamomile": "Una flor mutante decorativa encontrada durante el capítulo Vientos de cambio.",
   "islandupgrade.exoticResourcesDescription": "Esta área de Sunflower Land es conocida por sus recursos exóticos. ¡Amplía tu tierra para descubrir frutas, flores, colmenas de abejas y minerales raros! Esté atento a las estaciones, ya que afectan a lo que puede cultivar.",
