Improve Portuguese Translations

--- a/src/lib/i18n/dictionaries/pt-BR.json
+++ b/src/lib/i18n/dictionaries/pt-BR.json
@@ -4147,7 +4147,7 @@
   "skill.lumberjacksExtra": "+0,1 rendimento de madeira",
   "skill.treeCharge": "-10% de tempo de crescimento da árvore",
   "skill.moreAxes": "+50 machados",
-  "skill.instaChop": "1 Árvores de torneira",
+  "skill.instaChop": "Corta as árvores com 1 solo click",
   "skill.fellersDiscount": "-20% do custo do machado",
   "skill.moneyTree": "1% de chance de encontrar 200 moedas ao cortar árvores",
   "skill.treeBlitz": "Capacidade de fazer todas as árvores crescerem instantaneamente",
@@ -4160,11 +4160,11 @@
   "skill.fishyFeast": "+20% de EXP de Peixe",
   "skill.abundantHarvest": "+0,2 Produção de ovos, lã e leite",
   "skill.efficientFeeding": "-5% de ração para alimentar todos os animais",
-  "skill.doubleBale": "Efeito de Double Bale",
+  "skill.doubleBale": "Dobra o efeito do Bale",
   "skill.fineFibers": "+0,1 Rendimento de penas, couro e lã merino",
   "skill.bountifulBounties": "+50% de moedas de Animal Bounties",
   "skill.heartwarmingInstruments": "+50% de EXP Animal das ferramentas Animal Affection",
-  "skill.kaleMix": "Em vez disso, o grão misto requer 3 couves para misturar",
+  "skill.kaleMix": "Substitui os ingredientes do Mixed Grain por 3 Kales",
   "skill.healthyLivestock": "-50% de chance de adoecer",
   "skill.cluckyGrazing.buff": "-25% de ração para alimentar galinhas",
   "skill.cluckyGrazing.debuff": "+50% de ração para alimentar outros animais",
@@ -4181,7 +4181,7 @@
   "skill.rockAndRoll": "+0,1 Rendimento de Pedra",
   "skill.ironBumpkin": "+0,1 Rendimento de ferro",
   "skill.speedMiner": "-20% de tempo de recuperação de pedras",
-  "skill.tapProspector": "1 toque em pequenos nós minerais",
+  "skill.tapProspector": "Minere os minerais pequenhos com 1 solo click",
   "skill.forgeWardProfits": "+20% de receita de entregas de ferreiros",
   "skill.ironHustle": "-30% de tempo de recuperação de ferro",
   "skill.rockyFavor.buff": "+1 Rendimento de pedra",
@@ -4198,7 +4198,7 @@
   "skill.juicyBoost": "+10% de experiência com bebidas do Smoothie Shack",
   "skill.doubleNom.buff": "+1 comida da culinária",
   "skill.doubleNom.debuff": "2x ingredientes necessários para cozinhar",
-  "skill.turboFry": "-50% Tempo de cozimento na cozinha com óleo",
+  "skill.turboFry": "-50% Tempo de cozimento na Kitchen com óleo",
   "skill.instantGratification": "Capacidade de preparar todas as refeições que estão cozinhando prontas para serem consumidas",
   "skill.driveThroughDeli": "+15% de experiência para refeições na Deli",
   "skill.fieryJackpot": "+20% de chance de +1 comida do Firepit",
@@ -4224,7 +4224,7 @@
   "skill.fieldExtensionModule": "+5 parcelas adicionadas à máquina",
   "skill.greaseLightning": "Capacidade de reabastecer instantaneamente poços de petróleo vazios",
   "skill.efficientBin": "+5 Sprout Mix",
-  "skill.turboCharged": "+5 Mistura frutífera",
+  "skill.turboCharged": "+5 Fruitful Blend",
   "skill.wormyTreat": "+1 Minhoca",
   "skill.featheryBusiness.buff": "Use penas em vez de ovos para impulsionar os compostores",
   "skill.featheryBusiness.debuff": "2x penas para impulsionar os compostores",
@@ -4291,7 +4291,7 @@
   "skill.greenhouseGamble": "25% de chance de +1 produto de estufa",
   "skill.floweryAbode.debuff": "+50% de tempo de crescimento da flor",
   "skill.compostingBonanza.buff": "Acelere os compostores em mais uma hora ao impulsionar",
-  "skill.fruitfulBounty": "Efeito de mistura frutífera dupla",
+  "skill.fruitfulBounty": "Dobra o efeito do Fruitful Blend",
   "mayor.plaza.metBefore": "Olá {{username}}! Parece que já nos conhecemos. Se você quer mudar seu nome, eu não posso fazer isso por você agora, a papelada é demais para eu lidar.",
   "mayor.plaza.coffee": "Hmmm, você não adora o cheiro do café?",
   "mayor.plaza.intro": "Bem, colega Bumpkin, parece que ainda não fomos apresentados.",
@@ -4316,7 +4316,7 @@
   "marketplace.wearables": "Vestíveis",
   "marketplace.limited": "Limitado",
   "marketplace.myProfile": "Meu perfil",
-  "marketplace.budNfts": "NFTs da Bud",
+  "marketplace.budNfts": "Bud NFTs",
   "description.golden.cow.boost": "Alimente vacas de graça!",
   "temperateSeason.newSeason": "Nova temporada",
   "temperateSeason.seasonDetails": "Detalhes da temporada",
@@ -4578,7 +4578,7 @@
   "reputation.unlock.humanity": "Prova Completa de Humanidade - {{points}} pontos",
   "reputation.unlock.level": "Alcance o nível 100 - {{points}} pontos",
   "reputation.unlock.level15": "Alcance o nível 15 - {{points}} pontos",
-  "reputation.unlock.bud": "Tenha um amigo - {{points}} pontos",
+  "reputation.unlock.bud": "Tenha um Bud NFT - {{points}} pontos",
   "reputation.unlock.vip": "Acesso VIP - {{points}} pontos",
   "reputation.vip.purchase": "Compre o VIP Pass",
   "reputation.sprout": "Broto",
@@ -4754,7 +4754,7 @@
   "description.frozen.cow": "Uma vaca que ficou totalmente congelada pelos ventos do inverno.",
   "description.summer.chicken.boost": "Sem doença de frango durante o verão",
   "description.summer.chicken": "Uma galinha que adora o sol e que prospera no calor do verão, se aquecendo nos raios quentes e cacarejando de alegria!",
-  "description.jellyfish.boost": "Aumente a captura de peixe em 1% no verão",
+  "description.jellyfish.boost": "+1 peixe no Verão",
   "description.jellyfish": "Uma maravilha marinha luminosa que brilha com energia mística, garantindo habilidades aprimoradas de pesca durante os meses quentes de verão.",
   "description.chamomile": "Uma flor mutante decorativa encontrada durante o capítulo Winds of Change.",
   "islandupgrade.exoticResourcesDescription": "Esta área de Sunflower Land é conhecida por seus recursos exóticos. Expanda sua terra para descobrir frutas, flores, colmeias e minerais raros! Fique de olho nas estações do ano, pois elas afetam o que você pode cultivar.",
